# jeu

./: .gitignore  .tasks  CMakeLists.txt  CMakePresets.json  README.md  Settings.hpp  build.zig  buildUtils.zig  dependency.txt  head  jeu.cpp  jeu.h
ContentBuilder/: step.zig
ContentBuilder/include/: gltfLoader.hpp
ContentLoader/: CMakeLists.txt
ContentLoader/include/: gltfLoader.hpp
ContentLoader/src/: gltfLoader.cpp
Engine/: CMakeLists.txt  Settings.hpp  jeu.cpp  jeu.h  step.zig
Engine/Resources/: Content.mngt
Engine/Resources/Mesh/: untitled.blend
Engine/Resources/shaders/: compile.bat  compile.sh
Engine/include/: .directory
Engine/include/EngineBuildingBlock/: UBO.hpp
Engine/include/GameStruct/: Input.hpp  Model.hpp  SkyBox.hpp  SwapChain.hpp  Vertex.hpp
Engine/include/Utils/: BufferUtils.hpp  CommandPoolUtils.hpp  DescriptorSetUtils.hpp  FileMngmtUtils.hpp
Engine/shaders/: compile.bat
Engine/src/: Camera.cpp  DescriptorSet.cpp  FileManagement.cpp  Model.cpp  ShaderModulesUtils.cpp  SkyBox.cpp  SwapChain.cpp
Mesh/: arm.gltf  cube.glb
include/: AppHandler.hpp  BufferUtils.hpp  Camera.hpp  CommandPool.hpp  DescriptorSet.hpp  Model.hpp  RenderTarget.hpp  ShaderModuleUtils.hpp  SkyBox.hpp  SwapChain.hpp  UBO.hpp  ValidationLayer.hpp  Vertex.hpp
include/EngineBuildingBlock/: GLFWCallback.hpp  UBO.hpp  ValidationLayer.hpp  Vertex.hpp
include/GameStruct/: Camera.hpp  Model.hpp  SkyBox.hpp  SwapChain.hpp
include/Utils/: DescriptorSetUtils.hpp  FileMngmtUtils.hpp  QueueUtils.hpp
libUtils/: CMakeLists.txt  step.zig
libUtils/include/: Logger.hpp  MacroGlobal.hpp  MathCte.hpp  SpinFlag.hpp  SpinLock.hpp
libUtils/src/: Logger.cpp
shaders/: compile.bat  vert.vert  vertSkBx.vert
src/: BuffersUtils.cpp  Camera.cpp  DescriptorSet.cpp  FileManagement.cpp  Input.cpp  Model.cpp  QueueUtils.cpp  ShaderModulesUtils.cpp  SkyBox.cpp  SwapChain.cpp
